# competitive_ds_cource_prj

./: .dockerignore  .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile_dev_env  Makefile  README.md  build.sh  dvc.yaml  jupyter.sh  pyproject.toml  requirements.txt  setup.py  start.sh  start_runner.sh
.dvc/: config
.github/workflows/: template.yml  test_and_lint.yaml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
comp_ds_prj/: __init__.py
comp_ds_prj/data/: combine_data.py  make_dataset.py
comp_ds_prj/features/: build_features.py
comp_ds_prj/logs/: logs.py
comp_ds_prj/models/: model_catboost.py  predict_model.py
comp_ds_prj/visualization/: __init__.py  visualize.py
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore  car_train.csv.dvc  driver_info.csv.dvc
data/submissions/: .gitignore
docs/: Makefile  README.md  ci_cd_gh_actions.md  conf.py  data_description.md  development_environment.md  index.rst  make.bat
gh_actions_runner/: .dockerignore  Dockerfile  remove_runner.sh  start_runner.sh
notebooks/exploratory/: eda.ipynb  eda_before_train_test_split.ipynb
src/data/: links_to_raw_data.txt
workflow/: Snakefile
