[tool.poetry]
name = "competitive-ds-cource-prj"
version = "0.1.0"
description = "Проект для курса Введение в соревновательный Data Science на Stepic"
authors = ["Aleksei Bogachev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
click = "^8.1.7"
notebook = "^6"
snakemake = "^8.4.11"
dvc = "^3.45.0"
python-dotenv = "^1.0.1"
catboost = "^1.2.2"
ipywidgets = "^8.1.2"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
optuna = "^3.5.0"
shap = "^0.44.1"
category-encoders = "^2.6.3"
kaggle = "^1.6.6"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
nbqa = "^1.7.1"
pydocstyle = "^6.3.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = 'kaggle'
ignore_missing_imports = true